--- a/index.html
+++ b/index.html
@@ -1,37 +1,40 @@
 <!DOCTYPE html>
 <html>
+
 <head>
 	<title>Robot Friend</title>
 	<link rel="stylesheet" type="text/css" href="style.css">
 	<link href="https://fonts.googleapis.com/css?family=Roboto" rel="stylesheet">
 </head>
+
 <body>
 	<h1>Robot Friend</h1>
 	<div class="robots">
 		<div class="android">
 
 			<!-- Head Section -->
-			<section class="head"> 
-				<div class="eyes"> 
-					<div class="left_eye"></div> 
+			<div class="head">
+				<div class="eyes">
+					<div class="left_eye"></div>
 					<div class="right_eye"></div>
-				</div> 
-			</section>
+				</div>
+			</div>
 
 			<!-- Upper Body Section -->
-			<section class="upper_body"> 
-				<div class="left_arm"></div> 
-				<div class="torso"></div> 
-				<div class="right_arm"></div> 
-			</section> 
+			<div class="upper_body">
+				<div class="left_arm"></div>
+				<div class="torso"></div>
+				<div class="right_arm"></div>
+			</div>
 
 			<!-- Lower Body Section -->
-			<section class="lower_body"> 
-				<div class="left_leg"></div> 
-				<div class="right_leg"></div> 
-			</section>
+			<div class="lower_body">
+				<div class="left_leg"></div>
+				<div class="right_leg"></div>
+			</div>
 
 		</div>
 	</div>
 </body>
+
 </html>
